--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-ws": "^5.0.2",
+    "timeago.js": "^4.0.2",
     "ws": "^8.2.3"
   },
   "optionalDependencies": {
