--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "quickrun": "tsc && node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "febuild": "rollup -c",
+    "fedev": "rollup -c -w",
+    "start": "sirv app/public --no-clear"
   },
   "repository": {
     "type": "git",
@@ -14,29 +17,39 @@
   },
   "keywords": [
     "deemix",
-    "piracy"
+    "piracy",
+    "svelte"
   ],
   "author": "oatmealine",
   "license": "AGPL-3.0",
   "dependencies": {
     "deemix": "git+https://git.freezerapp.xyz/RemixDev/deemix-js",
-    "deezer-js": "^1.2.4",
+    "deezer-js": "^1.3.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "express-ws": "^5.0.2",
+    "sirv-cli": "^2.0.2",
     "timeago.js": "^4.0.2",
     "toml": "^3.0.0",
-    "winston": "^3.3.3",
-    "ws": "^8.2.3"
+    "winston": "^3.6.0",
+    "ws": "^8.5.0"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.5",
-    "utf-8-validate": "^5.0.7"
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^4.4.4",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@types/express": "^4.17.13",
     "@types/express-ws": "^3.0.1",
-    "@types/ws": "^8.2.0"
+    "@types/ws": "^8.2.3",
+    "rollup": "^2.68.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.46.4",
+    "typescript": "^4.5.5"
   }
 }
