--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "author": "oatmealine",
   "license": "AGPL-3.0",
   "dependencies": {
-    "deemix": "git+https://git.freezerapp.xyz/RemixDev/deemix-js",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "deemix": "git+https://gitlab.com/RemixDev/deemix-js",
     "deezer-js": "^1.3.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
     "express-ws": "^5.0.2",
     "sirv-cli": "^2.0.2",
+    "svelte-fontawesome": "^0.0.3",
+    "svelte-inview": "^3.0.1",
     "timeago.js": "^4.0.2",
     "toml": "^3.0.0",
     "winston": "^3.6.0",
