--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@zerodevx/svelte-toast": "^0.7.2",
     "deemix": "git+https://gitlab.com/RemixDev/deemix-js",
     "deezer-js": "^1.3.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
     "express-ws": "^5.0.2",
+    "file-saver": "^2.0.5",
     "sirv-cli": "^2.0.2",
     "svelte-fontawesome": "^0.0.3",
     "svelte-inview": "^3.0.1",
