--- a/package.json
+++ b/package.json
@@ -1,60 +1,32 @@
 {
-  "name": "deemix-web-frontend",
+  "name": "squid-deemix",
   "version": "1.0.0",
-  "description": "a dumb frontend for just getting some got damned songs",
-  "main": "dist/index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "quickrun": "tsc && node dist/index.js",
-    "build": "tsc",
-    "febuild": "rollup -c",
-    "fedev": "rollup -c -w",
-    "start": "sirv app/public --no-clear"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
-  "repository": {
-    "type": "git",
-    "url": "http://git.oat.zone/oat/deemix-web-frontend.git"
-  },
-  "keywords": [
-    "deemix",
-    "piracy",
-    "svelte"
-  ],
-  "author": "oatmealine",
-  "license": "AGPL-3.0",
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@zerodevx/svelte-toast": "^0.7.2",
-    "deemix": "git+https://gitlab.com/RemixDev/deemix-js",
-    "deezer-js": "^1.3.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.3",
-    "express-ws": "^5.0.2",
-    "file-saver": "^2.0.5",
-    "sirv-cli": "^2.0.2",
-    "svelte-fontawesome": "^0.0.3",
-    "svelte-inview": "^3.0.1",
-    "timeago.js": "^4.0.2",
-    "toml": "^3.0.0",
-    "winston": "^3.6.0",
-    "ws": "^8.5.0"
-  },
-  "optionalDependencies": {
-    "bufferutil": "^4.0.6",
-    "utf-8-validate": "^5.0.8"
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@types/express": "^4.17.13",
-    "@types/express-ws": "^3.0.1",
-    "@types/ws": "^8.2.3",
-    "rollup": "^2.68.0",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.46.4",
-    "typescript": "^4.5.5"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-config-standard": "^7.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
