--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "deemix": "^3.6.14",
+    "deezer-js": "^1.3.8",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
