--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,6 +31,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Detect package manager
         id: detect-package-manager
         run: |
@@ -57,6 +58,7 @@ jobs:
 
       - name: Prepare repository
         run: |
+          git fetch --all
           git checkout -b prod origin/prod
           git merge main
 
