--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.4",
     "toml": "^3.0.0"
   },
   "devDependencies": {
