--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "deemix": "^3.6.14",
-    "deezer-js": "^1.3.8",
+    "deezer-api-ts": "^1.2.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -21,17 +20,21 @@
     "toml": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "@types/cookiejar": "^2.1.5",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "postcss": "^8",
+    "eslint-plugin-react": "^7.34.1",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-config-standard": "^7.0.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
