--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "deezer-api-ts": "^1.2.3",
+    "deezer-api-ts": "github:jorgev259/deezer-api-ts#main",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.4",
-    "toml": "^3.0.0"
+    "react-error-boundary": "^4.0.13",
+    "react-loading-skeleton": "^3.4.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/cookiejar": "^2.1.5",
