--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
     "react-loading-skeleton": "^3.4.0",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "toml": "^3.0.0",
+    "tough-cookie": "^4.1.4"
   },
   "devDependencies": {
     "@types/cookiejar": "^2.1.5",
