--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "deezer-api-ts": "github:jorgev259/deezer-api-ts#main",
+    "deezer-api-ts": "^1.2.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
