--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "squid-deemix",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "deezer-api-ts": "^1.2.4",
+    "deemix": "gitlab:RemixDev/deemix-js",
+    "deezer-js": "^1.3.8",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -30,6 +31,7 @@
     "@types/tough-cookie": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
+    "deezer-api-ts": "^1.2.4",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
